@@ -1,2 +1,11 @@
 <A HREF="index.shtml"><IMG SRC="iTerm_header.png" TITLE="" ALT="iTerm" BORDER="0"></A>
-
+<script type="text/javascript"><!--
+google_ad_client = "pub-5743532873543938";
+google_ad_width = 728;
+google_ad_height = 15;
+google_ad_format = "728x15_0ads_al_s";
+google_ad_channel = "";
+//--></script>
+<script type="text/javascript"
+  src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
