@@ -1,3 +1,7 @@
+2006-12-6	fabian
+
+	* An attempt to fix the closing window confirmation panel.
+	
 2006-12-5	fabian
 
 	* Added support for xterm's 256-color mode
